--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewBag.BaseHref = "/conduct";
+    ViewBag.BaseHref = "/conduct/" + ViewBag.Link;
 }
 
 <conduct>
@@ -13,14 +13,14 @@
 
 <environment names="Development">
     <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="/node_modules/core-js/client/shim.min.js"></script>
+    <script src="/node_modules/zone.js/dist/zone.js"></script>
 
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="/node_modules/systemjs/dist/system.src.js"></script>
 
-    <script src="systemjs.config.js"></script>
+    <script src="/systemjs.config.js"></script>
     <script>
-        System.import('app/main-conduct.js').catch(function (err) { console.error(err); });
+        System.import('/app/main-conduct.js').catch(function (err) { console.error(err); });
     </script>
 </environment>
 
