--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -22,7 +22,7 @@
         </div>
 
         <div class="form-group">
-            <input asp-for="Password" class="form-control" placeholder="Password" autocomplete="off" onpaste="return false;" />
+            <input asp-for="Password" class="form-control" placeholder="Password" autocomplete="off"/>
             <div class="errors-container">
                 <span asp-validation-for="Password" class="error-msg"></span>
             </div>
