added aot production bundling

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -25,6 +25,7 @@
 </environment>
 
 <environment names="Staging,Production">
+    <script>window.module = "aot";</script>
     <script src="/dist/shims.js"></script>
-    <script src="/dist/app-bundle.js"></script>
+    <script src="/dist/app.bundle.js"></script>
 </environment>
