Made design improvements related to fonts and spacing for whole application.

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="loader-container main-loader">
         <div class="loader-block">
             <div class="spinner"></div>
-            <h1>Loading...</h1>
+            <p class="font-semibold mt10">Loading...</p>
         </div>
     </div>
 </app>
