--- a/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
@@ -94,8 +94,8 @@ h6, .h6 {
   margin-left: 10px;
 }
 
-.mt6 {
-  margin-top: 6px;
+.mt9 {
+  margin-top: 9px;
 }
 
 .mb5 {
@@ -190,6 +190,10 @@ h6, .h6 {
     color: $color_white;
     font-weight: 400;
 
+    &:hover {
+      background-color: rgba($color_theme, 0.8);
+    }
+
     &:active:hover, &:active:focus, &[disabled]:hover {
       background-color: $color_theme;
       border-color: $color_theme;
@@ -213,11 +217,11 @@ h6, .h6 {
 }
 
 .form-group {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   position: relative;
 
   label {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
     font-weight: 400;
   }
 
@@ -248,7 +252,7 @@ h6, .h6 {
 .errors-container {
   display: inline-block;
   vertical-align: top;
-  min-height: 20px;
+  min-height: 16px;
   min-width: 1px;
 
   .error-msg {
@@ -257,7 +261,7 @@ h6, .h6 {
     font-size: 11px;
     line-height: 14px;
     font-weight: 600;
-    padding-top: 5px;
+    padding-top: 2px;
   }
 }
 
@@ -265,12 +269,6 @@ h6, .h6 {
   font-weight: 700;
   color: $color_red;
   margin-top: 8px;
-
-  &.long-msg {
-    max-width: 400px;
-    text-align: left;
-    margin-top: 0;
-  }
 }
 
 .cdk-overlay-pane {
@@ -314,10 +312,10 @@ h6, .h6 {
 
       .dialog-title {
         border-bottom: 1px solid $color_border;
-        padding: 0 14px 12px 25px;
+        padding: 0 14px 8px 25px;
 
         .mat-dialog-title {
-          font-size: 24px;
+          font-size: 18px;
           font-weight: 600;
           margin: 0;
         }
@@ -327,6 +325,10 @@ h6, .h6 {
           background-color: transparent;
           border: 0;
           color: $color_base_secondary;
+
+          .material-icons {
+            font-size: 20px;
+          }
 
           &:hover {
             color: $color_base;
@@ -348,13 +350,6 @@ h6, .h6 {
         text-align: right;
         padding: 25px 25px 0 25px;
         margin: 0;
-      }
-
-      .loader-container .spinner {
-        width: 50px;
-        height: 50px;
-        border-width: 6px;
-        margin-top: -25px;
       }
     }
   }
@@ -465,6 +460,7 @@ md2-accordion-tab {
     }
 
     .qs-selected {
+      font-size: 13px;
       vertical-align: middle;
     }
 
@@ -530,6 +526,7 @@ md2-accordion-tab {
   .qs-text {
     display: inline-block;
     width: 85%;
+    word-break: break-all;
 
     .ans-option {
       margin-bottom: 5px;
@@ -564,9 +561,9 @@ md2-accordion-tab {
   margin-bottom: 0;
 
   .navbar-brand {
-    height: 60px;
-    padding: 18px 15px;
-    margin-right: 36px;
+    height: 52px;
+    padding: 17px 15px;
+    margin-right: 20px;
   }
 
   .navbar-nav {
@@ -574,8 +571,8 @@ md2-accordion-tab {
       a {
         color: $color_base;
         text-transform: uppercase;
-        padding: 20px;
-        min-width: 180px;
+        padding: 16px;
+        min-width: 160px;
         text-align: center;
 
         &:hover, &:focus {
@@ -596,8 +593,7 @@ md2-accordion-tab {
       margin-right: -25px;
 
       li .material-icons {
-        padding: 14px 10px;
-        font-size: 32px;
+        padding: 14px 6px;
         cursor: pointer;
       }
     }
@@ -619,8 +615,6 @@ footer {
   background-color: $color_bg;
 
   .title-area {
-    margin: 20px 0 30px;
-
     h1 {
       text-transform: uppercase;
     }
@@ -630,12 +624,14 @@ footer {
 .search-area {
   input {
     border: 0;
-    border-bottom: 2px solid $color_base;
+    border-bottom: 1px solid $color_border;
     padding: 3px;
     background-color: transparent;
+    width: 300px;
 
     &:focus {
       outline: 0;
+      border-color: $color_theme;
     }
   }
 
@@ -661,10 +657,10 @@ footer {
   background-color: $color_white_opacity;
 
   .spinner {
-    height: 68px;
-    width: 68px;
+    height: 48px;
+    width: 48px;
     animation: rotate 1s infinite linear;
-    border: 8px solid $color_theme;
+    border: 4px solid $color_theme;
     border-right-color: transparent;
     border-radius: 50%;
     margin: 0 auto;
@@ -672,7 +668,7 @@ footer {
     top: 50%;
     left: 0px;
     right: 0px;
-    margin-top: -34px;
+    margin-top: -24px;
   }
 
   &.main-loader {
@@ -683,14 +679,10 @@ footer {
       top: 50%;
       width: 100%;
       text-align: center;
-      margin-top: -38px;
+      margin-top: -32px;
 
       .spinner {
         position: static;
-      }
-
-      h1 {
-        margin-top: 15px;
       }
     }
   }
@@ -812,7 +804,7 @@ footer {
 
     .actions-area {
       text-align: right;
-      margin: 50px 15px 0 0;
+      margin: 30px 15px 0 0;
     }
   }
 }
@@ -844,15 +836,20 @@ footer {
       border: 1px solid $color_border;
       padding: 15px;
       margin-bottom: 20px;
+      height: 216px;
 
       .test-title {
-        h2 {
-          text-overflow: ellipsis;
+        h5 {
           overflow: hidden;
-          white-space: nowrap;
           width: 90%;
           cursor: pointer;
           line-height: normal;
+          padding-right: 5px;
+          height: 44px;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          word-break: break-all;
         }
 
         .material-icons {
@@ -863,7 +860,7 @@ footer {
       }
 
       .test-details {
-        margin: 40px 0 20px;
+        margin: 20px 0;
 
         p {
           margin-bottom: 5px;
@@ -871,7 +868,7 @@ footer {
       }
 
       &:hover {
-        .test-title h2 {
+        .test-title h5 {
           color: $color_theme;
         }
       }
@@ -919,6 +916,7 @@ footer {
     border: 1px solid $color_border;
     display: table;
     width: 100%;
+    table-layout: fixed;
 
     .block-title {
       h2 {
@@ -996,6 +994,7 @@ footer {
     .questions-block {
       display: table-cell;
       width: 75%;
+      background-color: $color_white;
 
       .block-title {
         padding: 14px 25px 12px;
@@ -1242,11 +1241,11 @@ footer {
   .setup-content {
     width: 800px;
     margin: 0 auto;
-    padding: 80px 0 100px;
+    padding: 40px 0 100px;
 
     .logo-area {
       text-align: center;
-      margin-bottom: 50px;
+      margin-bottom: 30px;
     }
 
     .wizard-area {
@@ -1321,10 +1320,10 @@ footer {
           margin-top: 30px;
           background-color: $color_white;
           border: 1px solid $color_border;
-          padding: 30px 20px 15px;
+          padding: 20px 20px 15px;
 
           h2 {
-            margin-bottom: 25px;
+            margin-bottom: 20px;
           }
 
           .form-group {
@@ -1337,11 +1336,21 @@ footer {
           }
 
           .proceed-link {
-            margin-bottom: 0;
+            .general-error-msg {
+              display: inline-block;
+              width: $full_size;
+              text-align: left;
+              margin-top: 0;
+            }
 
-            a {
-              color: $color_theme;
-              cursor: pointer;
+            p {
+              margin-bottom: 0;
+              text-align: left;
+
+              a {
+                color: $color_theme;
+                cursor: pointer;
+              }
             }
           }
         }
@@ -1483,8 +1492,10 @@ footer {
 
 .back-link {
   color: $color_theme;
+  font-weight: 600;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: $color_theme;
     text-decoration: none;
   }
@@ -1576,6 +1587,11 @@ footer {
 
       a {
         color: inherit;
+
+        &:hover {
+          text-decoration: none;
+          color: rgba($color_base_secondary, 0.8);
+        }
       }
 
       .material-icons {
@@ -1584,6 +1600,10 @@ footer {
 
       &.active {
         color: $color_theme;
+
+        a:hover {
+          color: rgba($color_theme, 0.8);
+        }
       }
     }
   }
@@ -1951,7 +1971,7 @@ footer {
       }
     }
   }
-   
+
   .grid-container {
     overflow-x: auto;
   }
@@ -1969,7 +1989,7 @@ footer {
       th {
         padding: 10px 20px;
         color: $color_base;
-        
+
         &[md2SortBy] svg {
           padding-bottom: 5px;
           height: 20px;
@@ -2093,22 +2113,20 @@ footer {
     width: 75%;
   }
 
-  .test-create-steps {
-    .footer-block {
-      .steps {
-        margin-left: 0;
+  .test-create-footer {
+    .steps {
+      margin-left: 0;
 
-        li {
-          padding-right: 5px;
-        }
+      li {
+        padding-right: 5px;
       }
+    }
 
-      .buttons-block {
-        margin-right: 0;
+    .buttons-block {
+      margin-right: 0;
 
-        .btn {
-          min-width: 110px;
-        }
+      .btn {
+        min-width: 110px;
       }
     }
   }
@@ -2119,15 +2137,15 @@ footer {
     }
   }
 
-  .general-error-msg.long-msg {
-    max-width: 250px;
-  }
-
   .questions-dashboard .main-block .category-block {
     width: 34%;
   }
 
   .questions-dashboard .main-block .questions-block {
     width: 66%;
+  }
+
+  .proceed-link {
+    width: 250px;
   }
 }
