Changed class name from trappist-grid to data-grid.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
@@ -1987,7 +1987,7 @@ footer {
   overflow-x: auto;
 }
 
-.trappist-grid {
+.data-grid {
   width: 100%;
   border: 1px solid $color_border;
   margin-top: 15px;
