--- a/Trappist/stylesheets/style.css
+++ b/Trappist/stylesheets/style.css
@@ -31,36 +31,9 @@ body{font-family:prox-reg;}
 .navbar-default .navbar-toggle {
     border-color: #FBC213;
 }
-.git-projects{margin:20px 0px;}
-.git-projects h1{color:#4C4C4C;font-size:47px;font-family:prox-light;}
-.git-projects h4{color: #696969;font-size: 20px;margin-top:15px;font-family:prox-light;}
-.git-projects a.git-link{color: #FCCC39;font-size: 24px;cursor:pointer}
-.git-projects .pr-list{color: #747474;font-size: 20px;margin-top: 30px;}
-.git-projects .arrow-img{margin:15px 0px 20px 0px;}
 
-.all-projects{margin:0 auto;}
-.all-projects .pr-view img.bg-img{width: 100%;height: 250px;}
-.all-projects .text-div{    position: absolute;bottom: 0;padding: 0px 10px 10px 10px;color: #fff;left: 3px;}
-.all-projects .text-div h3{font-size: 30px;text-transform: uppercase;}
-.all-projects .text-div h5{font-size:20px;color:rgba(255,255,255, 0.75);font-family:prox-light;}
-.all-projects .text-div span{color:rgba(255,255,255, 0.5);padding: 0px 3px;}
-.all-projects .add-icon{position: absolute;bottom: 0;right: 0;background-color: #fff;padding: 6px 8px;}
-.all-projects .add-icon i{font-size:33px;vertical-align:middle;}
-.all-projects .text-div img {width: 12px;vertical-align: text-top;}
 
- .pr-view{position:relative}
- .img1{position:relative}
- .layer{ position: absolute;top: 0;left: 0;width: 100%;height: 100%;}
- .layer-blue{background-color: rgba(2,109,212, 0.65); border-top:10px solid #026DD4;}
- .layer-blue .add-icon i{color:#026DD4}
- .layer-orange{background-color: rgba(220,51,0, 0.65);border-top:10px solid #Dc3300;}
-  .layer-orange .add-icon i{color:#Dc3300}
- .layer-green{background-color: rgba(18,105,97,0.65); border-top:10px solid #126961;}
-  .layer-green .add-icon i{color:#126961}
- .layer-violet{background-color: rgba(42,13,89,0.65);border-top:10px solid #2A0D59}
-  .layer-violet .add-icon i{color:#2A0D59}
- .layer-brown{background-color: rgba(139,87,42,0.65); border-top:10px solid #8B572A}
-  .layer-brown .add-icon i{color:#8B572A}
+ 
 
 
 
@@ -78,27 +51,31 @@ body{font-family:prox-reg;}
     box-shadow: 0px 0px 5px 0px rgba(100, 100, 100, .3);
  }
 
- .image-container{position:relative;overflow:hidden;}
- .pr-view .bg-img{
-   display: block;
-  overflow: hidden;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
 
- }
-
- .pr-view:hover  .bg-img {
-     -moz-transform: rotate(4deg) scale(1.3) ; 
--webkit-transform: rotate(4deg) scale(1.3);
--o-transform: rotate(4deg) scale(1.3) ;
-
- }
 
  .m-10{margin:10px;}
 
-
+.pl-mh, .pl-mh .pl-en, .pl-ms {
+    font-weight: bold;
+    color: rgb(29, 62, 129);
+}
+.pl-v, .pl-smw {
+    color: rgb(237, 106, 67);
+}
+.pl-e, .pl-en {
+    color: rgb(121, 93, 163);
+}
+.pl-mb {
+    font-weight: bold;
+    color: rgb(51, 51, 51);
+}
+.pl-mi {
+    font-style: italic;
+    color: rgb(51, 51, 51);
+}
+.pl-c1, .pl-s .pl-v {
+    color: rgb(0, 134, 179);
+}
 
 
 /* Portrait phones and smaller */
