Tried to implement webpack-aot but errors exist.

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -12,20 +12,11 @@
 </app>
 <form asp-controller="Profile" asp-action="LogOut" method="post" id="logoutForm" class="navbar-right"></form>
 <environment names="Development">
-    <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/core-js/client/shim.min.js"></script>
-    <script src="/node_modules/zone.js/dist/zone.js"></script>
-
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
-
-    <script src="/systemjs.config.js"></script>
-    <script>
-        System.import('/app/main.js').catch(function (err) { console.error(err); });
-    </script>
+    <script src="polyfill.bundle.js"></script>
+    <script src="main.bundle.js"></script>
 </environment>
 
 <environment names="Staging,Production">
-    <script>window.module = "aot";</script>
-    <script src="/dist/shims.js"></script>
-    <script src="/dist/app.bundle.js"></script>
+    <script src="polyfill.bundle.js"></script>
+    <script src="main.bundle.js"></script>
 </environment>
