--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -16,9 +16,7 @@
 
     <!--CSS-->
     <environment names="Development">
-        <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
-        <link rel="stylesheet" href="/node_modules/@@angular/material/prebuilt-themes/indigo-pink.css">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" type="text/css" href="style.bundle.css" />
     </environment>
 
     <environment names="Staging,Production">
