Index.cshtml - changes as per webpack Conduct.cshtml - changes as per webpack Setup.cshtml - changes as per webpack webpack(folder) - contain configuration of webpack *.component.ts - added to string for module Id as webpack take module id as a number and angular 2 as string packages.json - added package for webpack ->     "@ngtools/webpack": "^1.4.1",     "aspnet-webpack": "^1.0.29"     "@types/core-js": "0.9.39",         "angular2-template-loader": "0.6.2",     "awesome-typescript-loader": "3.1.2",     "chokidar": "1.6.1",     "concurrently": "3.4.0",     "copy-webpack-plugin": "4.0.1",     "css-loader": "0.27.3",     "extract-text-webpack-plugin": "2.1.0",     "gh-pages": "0.12.0",     "http-server": "0.9.0",     "raw-loader": "0.5.1",     "rimraf": "2.6.1",     "source-map-explorer": "1.3.3",     "style-loader": "0.16.1",     "to-string-loader": "1.1.5",     "webpack": "2.3.2",     "webpack-dev-server": "2.4.2",     "webpack-hot-middleware": "^2.18.0" Startup.cs - added configuration for webpack middleware tsconfig.json - common for all wwwroot/tsconfig.json - removed wwwroot/tsconfig.aot.json - removed webpack.aot.config.js - configuration of webpack for aot webpack.jit.config.js - configuration of webpack for jit .gitignore - added build and dist
Fixes - #270

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.BaseHref = "/";
 }
-
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <app>
     <div class="loader-container main-loader">
         <div class="loader-block">
@@ -11,21 +11,7 @@
     </div>
 </app>
 <form asp-controller="Profile" asp-action="LogOut" method="post" id="logoutForm" class="navbar-right"></form>
-<environment names="Development">
-    <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/core-js/client/shim.min.js"></script>
-    <script src="/node_modules/zone.js/dist/zone.js"></script>
 
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
-
-    <script src="/systemjs.config.js"></script>
-    <script>
-        System.import('/app/main.js').catch(function (err) { console.error(err); });
-    </script>
-</environment>
-
-<environment names="Staging,Production">
-    <script>window.module = "aot";</script>
-    <script src="/dist/shims.js"></script>
-    <script src="/dist/app.bundle.js"></script>
-</environment>
+<script type="text/javascript" src="~/dist/main.bundle.js"></script>
+<script type="text/javascript" src="~/dist/polyfill.bundle.js"></script>
+<script type="text/javascript" src="~/dist/vendor.bundle.js"></script>
