Conduct.cshtml - update the sequence of script reference Setup.cshtml - update the sequence of script reference Index.cshtml - update the sequence of script reference entry.aot.js - added bundle for set and conduct entry.jit.js - added bundle for set and conduct plugin.prod.js - updated the path for tsconfig of of aot main.aot.ts - updated the path of ngfactory main.setup.aot.ts - updated the path of ngfactory main.conduct.aot.ts - updated the path of ngfactory tsconfig-aot.json - tsconfig for aot tsconfig.json - update the target and added lib
Fixes - #270

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -11,6 +11,6 @@
     </div>
 </conduct>
 
-<script type="text/javascript" src="~/dist/main.bundle.js"></script>
 <script type="text/javascript" src="~/dist/polyfill.bundle.js"></script>
+<script type="text/javascript" src="~/dist/main.conduct.bundle.js"></script>
 <script type="text/javascript" src="~/dist/vendor.bundle.js"></script>
