--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
@@ -11,6 +11,6 @@
     </div>
 </setup>
 
-<script type="text/javascript" src="~/dist/main.bundle.js"></script>
 <script type="text/javascript" src="~/dist/polyfill.bundle.js"></script>
+<script type="text/javascript" src="~/dist/main.setup.bundle.js"></script>
 <script type="text/javascript" src="~/dist/vendor.bundle.js"></script>
