--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewBag.BaseHref = "/conduct/" + ViewBag.Link;
 }
-
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <conduct>
     <div class="loader-container main-loader">
         <div class="loader-block">
@@ -12,16 +12,9 @@
 </conduct>
 
 <environment names="Development">
-    <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/core-js/client/shim.min.js"></script>
-    <script src="/node_modules/zone.js/dist/zone.js"></script>
-
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
-
-    <script src="/systemjs.config.js"></script>
-    <script>
-        System.import('/app/main.conduct.js').catch(function (err) { console.error(err); });
-    </script>
+    <script type="text/javascript" src="~/dist/polyfill.bundle.js"></script>
+    <script type="text/javascript" src="~/dist/main.conduct.bundle.js"></script>
+    <script type="text/javascript" src="~/dist/vendor.bundle.js"></script>
 </environment>
 
 <environment names="Staging,Production">
