--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -47,6 +47,8 @@
         </div>
     </footer>
     <script src="https://cdn.ckeditor.com/4.6.2/standard/ckeditor.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
     <script src="https://cdn.ckeditor.com/4.5.11/full-all/plugins/divarea/plugin.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.3.2/jspdf.plugin.autotable.js"></script>
 </body>
 </html>
