added error message for sendmail failed and basicsetup validations

--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
@@ -8,6 +8,7 @@
         <h2>Forgot Password</h2>
     </div>
     <form asp-controller="Account" asp-action="ForgotPassword" method="post">
+        <span class="general-error-msg">@ViewBag.EmailError</span>
         <div class="form-group">
             <input asp-for="Email" class="form-control" placeholder="Provide your Email here"/>
             <div class="errors-container">
