--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -50,5 +50,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
     <script src="https://cdn.ckeditor.com/4.5.11/full-all/plugins/divarea/plugin.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
+    <script src="https://fastcdn.org/FileSaver.js/1.1.20151003/FileSaver.min.js"></script>
 </body>
 </html>
